# chess_group7

./: Board.py  README.md  ai_ratings.json  bitboard.cpp  bot_vs_bot.py  bot_vs_stockfish.py  chess_game.py  evaluate.cpp  game.py  game.spec  history.cpp  human_memory.json  main.cpp  main_menu.py  memory.h  memory.json  movegen.cpp  movegen.h  notification.py  play.py  play_1vs1.py  play_ai_vs_ai.py  play_vs_ai.py  result.txt  score.h  search.cpp  test_engine_advanced.py  train_ai.py  tt.cpp  types.h  unit_test_chess_game.py  unittest_notification.py  utils.py
Engine/: ai.py  bitboard.h  chess_model.pth  convert_model.py  elo_system.py  engine.py  evaluate.h  evaluation.py  finetune.py  history.h  learner.py  memory.cpp  memory.py  position.cpp  position.h  score.cpp  search.h  search.py  stockfish_helper.py  train.py  tt.h  uci.cpp  uci.h
Engine/Data/: games.pgn
Engine/Kingfish/: CMakeLists.txt  engine-interface.txt
Engine/Kingfish/src/kingfish/: bitboard.h  piece.h
Engine/Kingfish/src/kingfish/ai/: searcher.cpp  searcher.h
Engine/bluefish/: attacks.cpp  main.cpp  timemanagement.h  uci.cpp  uci.h
Engine/chess/: alpha_beta.cpp  alpha_beta.h  board.h  engine.cpp  engine.h  king_safety.cpp  king_safety.h  main.cpp  material.cpp  material.h  mobility.cpp  mobility.h  other_factors.cpp  other_factors.h  pawn_structure.cpp  pawn_structure.h  piece_position.cpp  piece_position.h
Engine/evaluation/: README.md  base.py  king_evaluation.py  main_evaluator.py  pawn_evaluation.py  phase_evaluator.py  piece_evaluation.py  position_evaluation.py  weights.py
(+1 files in other folders)
